# SegNetPrepar

./: .gitignore  CMakeLists.txt
qclient/: CMakeLists.txt  main.cpp
qclient/include/: GCModule.h  ImageLoader.h  ImageViewer.h  MainWindow.h  SegInfo.h  SettingDialog.h
qclient/resources/: resource.qrc
qclient/resources/icons/: setting 2.pxm
qclient/src/: GCModule.cpp  ImageLoader.cpp  ImageViewer.cpp  MainWindow.cpp  SegInfo.cpp  SettingDialog.cpp
server/: make_list.py  segnetserver.py
